--- a/site/_sass/_jekyll-doc-theme.scss
+++ b/site/_sass/_jekyll-doc-theme.scss
@@ -19,7 +19,7 @@ html {
 
   .header-container {
     background-color: black;
-    background: url('../img/bg.png') no-repeat 50% 0;
+    background: url('../img/bg.webp') no-repeat 50% 0;
     color: #fff;
 
     h1 {
