--- a/site/_includes/topnav.html
+++ b/site/_includes/topnav.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
             <a class="navbar-brand" href="{{ site.baseurl }}/">
-                <span><img src="{{ "/assets/img/logonav.webp" | relative_url }}" alt="Logo"></span> Utils
+                <span><img src="{{ "/assets/img/logo_WSK.png" | relative_url }}" alt="Logo"></span>
             </a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
